--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   padding: 20px;
   -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  border-radius: 1px;
+  border-radius: 5px;
 }
 
 .input {
@@ -54,6 +54,10 @@ body {
     box-shadow 0.2s;
 }
 
+.buttons {
+  margin-right: 0;
+}
+
 .operators div:hover {
   background-color: #fefae0;
 }
@@ -79,7 +83,6 @@ body {
     box-shadow 0.2s;
 }
 
-
 .numbers div:hover {
   background-color: #ccd5ae;
 }
@@ -88,7 +91,7 @@ body {
   font-weight: bold;
 }
 
-div.equal {
+div.mbtn {
   display: inline-block;
   border-radius: 5px;
   width: 17%;
@@ -98,7 +101,30 @@ div.equal {
   vertical-align: top;
   cursor: pointer;
   color: #fff;
-  background-color: #fbc4ab; d4a373
+  background-color: #a4be7b;
+  transition: all 0.2s ease-in-out;
+}
+
+div.mbtn:hover {
+  background-color: #5f8d4e;
+}
+
+div.mbtn:active {
+  font-weight: bold;
+}
+
+div.equal {
+  display: inline-block;
+  border-radius: 5px;
+  width: 96%;
+  height: 10%;
+  text-align: center;
+  /* padding: 124px 10px; */
+  /* margin: 10px 6px 10px 0; */
+  vertical-align: top;
+  cursor: pointer;
+  color: #fff;
+  background-color: #fbc4ab;
   transition: all 0.2s ease-in-out;
 }
 
@@ -107,5 +133,12 @@ div.equal:hover {
 }
 
 div.equal:active {
+  font-weight: bold;
+}
+
+.disclaimer {
+  margin-top: 1rem;
+  margin-left: 3.5rem;
+  font-size: 0.9rem;
   font-weight: bold;
 }
